@@ -6,9 +6,12 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import io.reactivex.exceptions.CompositeException;
+import org.apache.cxf.jaxrs.utils.ExceptionUtils;
 import org.junit.Test;
 
 import com.gentics.mesh.core.data.job.Job;
@@ -61,6 +64,42 @@ public class JobTest extends AbstractMeshTest {
 			assertEquals(job.getType(), response.getType());
 			assertEquals(job.getCreationDate(), response.getCreated());
 			assertEquals(user().getUuid(), response.getCreator().getUuid());
+		}
+	}
+
+	private Exception buildExceptionStackTraceLongerThan(int size) {
+		List<Exception> exceptions = new ArrayList<>();
+		do {
+			exceptions.add(new Exception("Some Error"));
+		} while (ExceptionUtils.getStackTrace(new CompositeException(exceptions)).length() < size);
+		return new CompositeException(exceptions);
+	}
+
+	@Test
+	public void testJobErrorDetailTruncate() {
+		try (Tx tx = tx()) {
+			JobRoot root = boot().jobRoot();
+			Job job = root.enqueueReleaseMigration(user(), initialRelease());
+			assertNull("The job error detail should be null since it has not yet been marked as failed.", job.getErrorDetail());
+			Exception ex = buildExceptionStackTraceLongerThan(Job.ERROR_DETAIL_MAX_LENGTH * 2);
+			assertThat(ExceptionUtils.getStackTrace(ex).length()).isGreaterThan(Job.ERROR_DETAIL_MAX_LENGTH);
+			// Now test the if the error details are really truncated
+			job.markAsFailed(ex);
+			assertNotNull(job.getErrorDetail());
+			assertThat(job.getErrorDetail().length()).isLessThanOrEqualTo(Job.ERROR_DETAIL_MAX_LENGTH);
+			tx.success();
+		}
+
+		try (Tx tx = tx()) {
+			JobRoot root = boot().jobRoot();
+			List<? extends Job> list = TestUtils.toList(root.findAllIt());
+			assertThat(list).hasSize(1);
+			Job job = list.get(0);
+
+			// Verify the transformation to rest
+			JobResponse response = job.transformToRestSync(null, 0);
+			assertNotNull(response.getErrorDetail());
+			assertThat(response.getErrorDetail().length()).isLessThanOrEqualTo(Job.ERROR_DETAIL_MAX_LENGTH);
 		}
 	}
 
